Updated styles and fixed mobile layout issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,27 @@
 /* General Styles */
+html {
+    width: 100%;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #b0e4f6;
     margin: 0;
     padding: 0;
     margin-top: 60px;
-    overflow-x: hidden;   
+    width: 100%;
+    overflow-x: hidden;
     transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+* {
+    box-sizing: border-box;
+  }
+
+section {
+    width: 100% !important;
 }
 
 body.no-transition {
@@ -58,6 +73,11 @@ hr {
     border-top: 8px dotted grey;
     width: 6%;
     margin: 2rem auto;
+}
+
+a {
+    cursor: pointer;
+    touch-action: manipulation;
 }
 
 /* Container Styling */
@@ -339,8 +359,8 @@ hr {
         top: 70%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 150px;
-        height: 200px;
+        width: 200px;
+        height: 300px;
     }
 
     .header-text h1 {
@@ -366,8 +386,8 @@ hr {
 
     .profile-container {
         top: 65%;
-        width: 150px;
-        height: 200px;
+        width: 200px;
+        height: 300px;
     }
 
     .header-text h1 {
